// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipes card component  render as expected 1`] = `
<div
  className="recipe-card"
>
  <div
    className="recipe-card-body"
  >
    <img
      alt="rice and beans"
      className="recipe-card-img"
      src="https://i.pinimg.com/564x/b5/be/08/b5be084a849fa67c190cc85b1e9216c3.jpg"
    />
    <div
      className="recipe-card-underlay"
    >
      <p
        className="lead text-capitalize"
      >
        dinner
      </p>
      <button
        className="btn recipe-card-underlay-btn"
        data-dismiss="modal"
        data-target=""
        data-toggle=""
        href=""
        onClick={[Function]}
        type="button"
      >
        view details
      </button>
    </div>
  </div>
  <div
    className="recipe-card-footer"
  >
    <h4
      className="ellipsis"
    >
      rice and beans
    </h4>
    <div
      className="d-flex col-12 no-padding justify-content-between"
    >
      <div
        className="d-flex col-8 no-padding"
      >
        <div
          className="icon-wrapper"
          onClick={[Function]}
          onMouseEnter={[Function]}
          role="button"
          tabIndex="0"
        >
          <i
            className="icon fa fa-thumbs-up recipe-card-icon "
            data-target=""
            data-toggle=""
          >
            <span>
              30
            </span>
          </i>
        </div>
        <div
          className="icon-wrapper"
          onClick={[Function]}
          onMouseEnter={[Function]}
          role="button"
          tabIndex="0"
        >
          <i
            className="icon fa fa-thumbs-down recipe-card-icon "
            data-target=""
            data-toggle=""
          >
            <span>
              0
            </span>
          </i>
        </div>
        <div
          className="icon-wrapper"
          onClick={[Function]}
          onMouseEnter={[Function]}
          role="button"
          tabIndex="0"
        >
          <i
            className="icon fa fa-eye recipe-card-icon"
            data-target=""
            data-toggle=""
          >
            <span>
              120
            </span>
          </i>
        </div>
      </div>
      <div
        className="icon-wrapper pointer"
        onClick={[Function]}
        onMouseEnter={[Function]}
        role="button"
        tabIndex="0"
      >
        <i
          className="icon fa recipe-card-icon fav-color fav fa-heart-o"
          data-target=""
          data-toggle=""
        >
          <span />
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`Recipes card component  render as expected when favorite icon is clicked  1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "blank",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <RecipeCard
      category="dinner"
      downVotes={0}
      isFav={[Function]}
      push={[Function]}
      recipeId={1}
      recipeName="rice and beans"
      toggleFav={[Function]}
      upVotes={30}
      views={120}
    >
      <div
        className="recipe-card"
      >
        <div
          className="recipe-card-body"
        >
          <img
            alt="rice and beans"
            className="recipe-card-img"
            src="https://i.pinimg.com/564x/b5/be/08/b5be084a849fa67c190cc85b1e9216c3.jpg"
          />
          <div
            className="recipe-card-underlay"
          >
            <p
              className="lead text-capitalize"
            >
              dinner
            </p>
            <Button
              Tag="button"
              className="recipe-card-underlay-btn"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              href=""
              text="view details"
              type="button"
            >
              <button
                className="btn recipe-card-underlay-btn"
                data-dismiss="modal"
                data-target=""
                data-toggle=""
                href=""
                onClick={[Function]}
                type="button"
              >
                view details
              </button>
            </Button>
          </div>
        </div>
        <div
          className="recipe-card-footer"
        >
          <h4
            className="ellipsis"
          >
            rice and beans
          </h4>
          <div
            className="d-flex col-12 no-padding justify-content-between"
          >
            <div
              className="d-flex col-8 no-padding"
            >
              <Icon
                active=""
                className=""
                dataTarget=""
                dataToggle=""
                handleClick={[Function]}
                iconClass="fa fa-thumbs-up recipe-card-icon "
                onMouseEnter={[Function]}
                parentClass=""
                pointer={false}
              >
                <div
                  className="icon-wrapper"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <i
                    className="icon fa fa-thumbs-up recipe-card-icon "
                    data-target=""
                    data-toggle=""
                  >
                    <span>
                      30
                    </span>
                  </i>
                </div>
              </Icon>
              <Icon
                active=""
                className=""
                dataTarget=""
                dataToggle=""
                handleClick={[Function]}
                iconClass="fa fa-thumbs-down recipe-card-icon "
                onMouseEnter={[Function]}
                parentClass=""
                pointer={false}
              >
                <div
                  className="icon-wrapper"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <i
                    className="icon fa fa-thumbs-down recipe-card-icon "
                    data-target=""
                    data-toggle=""
                  >
                    <span>
                      0
                    </span>
                  </i>
                </div>
              </Icon>
              <Icon
                active=""
                className=""
                dataTarget=""
                dataToggle=""
                handleClick={[Function]}
                iconClass="fa fa-eye recipe-card-icon"
                onMouseEnter={[Function]}
                parentClass=""
                pointer={false}
              >
                <div
                  className="icon-wrapper"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <i
                    className="icon fa fa-eye recipe-card-icon"
                    data-target=""
                    data-toggle=""
                  >
                    <span>
                      120
                    </span>
                  </i>
                </div>
              </Icon>
            </div>
            <Icon
              active=""
              className=""
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa recipe-card-icon fav-color fav fa-heart-o"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={true}
            >
              <div
                className="icon-wrapper pointer"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa recipe-card-icon fav-color fav fa-heart-o"
                  data-target=""
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </div>
      </div>
    </RecipeCard>
  </Router>
</BrowserRouter>
`;

exports[`Recipes card component  render as expected when favorite icon is clicked  2`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "blank",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <RecipeCard
      category="dinner"
      downVotes={0}
      isFav={[Function]}
      push={[Function]}
      recipeId={1}
      recipeName="rice and beans"
      toggleFav={[Function]}
      upVotes={30}
      views={120}
    >
      <div
        className="recipe-card"
      >
        <div
          className="recipe-card-body"
        >
          <img
            alt="rice and beans"
            className="recipe-card-img"
            src="https://i.pinimg.com/564x/b5/be/08/b5be084a849fa67c190cc85b1e9216c3.jpg"
          />
          <div
            className="recipe-card-underlay"
          >
            <p
              className="lead text-capitalize"
            >
              dinner
            </p>
            <Button
              Tag="button"
              className="recipe-card-underlay-btn"
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              href=""
              text="view details"
              type="button"
            >
              <button
                className="btn recipe-card-underlay-btn"
                data-dismiss="modal"
                data-target=""
                data-toggle=""
                href=""
                onClick={[Function]}
                type="button"
              >
                view details
              </button>
            </Button>
          </div>
        </div>
        <div
          className="recipe-card-footer"
        >
          <h4
            className="ellipsis"
          >
            rice and beans
          </h4>
          <div
            className="d-flex col-12 no-padding justify-content-between"
          >
            <div
              className="d-flex col-8 no-padding"
            >
              <Icon
                active=""
                className=""
                dataTarget=""
                dataToggle=""
                handleClick={[Function]}
                iconClass="fa fa-thumbs-up recipe-card-icon "
                onMouseEnter={[Function]}
                parentClass=""
                pointer={false}
              >
                <div
                  className="icon-wrapper"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <i
                    className="icon fa fa-thumbs-up recipe-card-icon "
                    data-target=""
                    data-toggle=""
                  >
                    <span>
                      30
                    </span>
                  </i>
                </div>
              </Icon>
              <Icon
                active=""
                className=""
                dataTarget=""
                dataToggle=""
                handleClick={[Function]}
                iconClass="fa fa-thumbs-down recipe-card-icon "
                onMouseEnter={[Function]}
                parentClass=""
                pointer={false}
              >
                <div
                  className="icon-wrapper"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <i
                    className="icon fa fa-thumbs-down recipe-card-icon "
                    data-target=""
                    data-toggle=""
                  >
                    <span>
                      0
                    </span>
                  </i>
                </div>
              </Icon>
              <Icon
                active=""
                className=""
                dataTarget=""
                dataToggle=""
                handleClick={[Function]}
                iconClass="fa fa-eye recipe-card-icon"
                onMouseEnter={[Function]}
                parentClass=""
                pointer={false}
              >
                <div
                  className="icon-wrapper"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <i
                    className="icon fa fa-eye recipe-card-icon"
                    data-target=""
                    data-toggle=""
                  >
                    <span>
                      120
                    </span>
                  </i>
                </div>
              </Icon>
            </div>
            <Icon
              active=""
              className=""
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa recipe-card-icon fav-color fav fa-heart-o"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={true}
            >
              <div
                className="icon-wrapper pointer"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa recipe-card-icon fav-color fav fa-heart-o"
                  data-target=""
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </div>
      </div>
    </RecipeCard>
  </Router>
</BrowserRouter>
`;
